--- a/user-form.html
+++ b/user-form.html
@@ -17,13 +17,12 @@
 <script>
     $(document).ready(function () {
         console.log('Users loaded');
-
         $('#create-user-form').on('submit', function (event) {
             event.preventDefault();  //prevent calling form  action
 
             let formData = {
                 name: $('#name').val(),
-                name: $('#job').val()
+                job: $('#job').val()
             }
             console.log('form submitted', formData);
 
@@ -32,21 +31,13 @@
                 type: 'POST',
                 data: JSON.stringify(formData),
                 success: function (response) {
-                    $('#alerts').html(`
-                        <div class="alert alert-success alert-dismissible fade show" role="alert">
-                            User created!
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    `);
-
+                    showAlert('success', `User ${formData.name} Created!`);
                 },
                 error: function (xhr, ajaxOptions, thrownError) {
                     console.log(`request failed with status : ${xhr.status}, underlying error: ${xhr.responseText}`);
+                    showAlert('error', 'User Creation failed. Please try again later!');
                 },
-
             });
-
         });
     });
-
 </script>
