--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navigation">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#login" data-page="login.html">Login</a>
+                        <a class="nav-link active" aria-current="page" href="#" data-page="login.html">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#" data-page="users.html">Users</a>
