--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" data-page="home.html">Navbar</a>
+            <a class="navbar-brand" href="#" data-page="includes/home.html">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -25,20 +25,30 @@
             </button>
             <div class="collapse navbar-collapse" id="navigation">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" data-page="login.html">Login</a>
+                    <li class="nav-item login">
+                        <a class="nav-link" aria-current="page" href="#" data-page="includes/login.html" data-role="a">Login</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" data-page="users.html">Users</a>
+                    <li class="nav-item user">
+                        <a class="nav-link" aria-current="page" href="#" data-page="includes/user/users.html">Users</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" data-page="user-form.html">Create User</a>
+                    <li class="nav-item user">
+                        <a class="nav-link" href="#" data-page="includes/user/user-form.html">Create User</a>
+                    </li>
+                    <li class="nav-item admin">
+                        <a class="nav-link" href="#" data-page="includes/admin/admin-page1.html">Admin Page 1</a>
+                    </li>
+                    <li class="nav-item admin">
+                        <a class="nav-link" href="#" data-page="includes/admin/admin-page2.html">Admin Page 2</a>
+                    </li>
+                    <li class="nav-item logout">
+                        <a class="nav-link" href="#" data-page="includes/logout.html">Logout</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <!-- holds all success/error messages-->
     <div class="container-fluid" id="alerts">
     </div>
 
@@ -60,25 +70,31 @@
     -->
 
     <!--jQuery-->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="common.js"></script>
+
+    <script type="text/javascript" src="scripts/common.js"></script>
+    <script type="text/javascript" src="scripts/login.js"></script>
+
     <script>
 
         $(document).ready(function () {
-            console.log('DOM loaded');
+            console.log('index.html DOM loaded');
 
-            $('#page-content').load('home.html');
+            //iniitally load carousal
+            $('#page-content').load('includes/home.html');
 
             $("nav a").on('click', function () {
                 let page = $(this).data('page');
                 console.log('page', page);
+                $('#alerts').empty();
                 $('#page-content').empty();
                 showLoading();
                 $('#page-content').load(page, function () {
                     hideLoading();
                 });
             });
+
+            setupNavigation();
         });
 
     </script>
